[tool.poetry]
name = "rs-worker"
version = "0.1.0"
description = "Backend to serve imagery data and perform operations on that data."
authors = ["VivaldoGP <VivaldoGP27@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
email-validator = "^2.2.0"
bcrypt = "^4.2.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
